src/objects/ADvendio__Campaign_Contact__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Campaign_Contact_Role__c</fullName>
        <label>Campaign Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Advertiser</fullName>
                </value>
                <value>
                    <fullName>Contact Agency</fullName>
                </value>
                <value>
                    <fullName>Contact Beneficiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Media Campaigns</relationshipLabel>
        <relationshipName>Campaing_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Media_Campaign__c</fullName>
        <label>Media Campaign</label>
        <referenceTo>ADvendio__MediaCampaign__c</referenceTo>
        <relationshipLabel>Campaign Contacts</relationshipLabel>
        <relationshipName>Campaing_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__QuoteContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Campaign Contact</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{0}</displayFormat>
        <label>Contact Role No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>